--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
       body {
         background-color: Grayish orange;
         text-align: center;
+        align-content: center;
       }
       
  .lds-ring {
