--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title> Zona Wifi Residencias Mandalay </title>
   <style>
       body {
-        background-color: Grayish orange;
+        background-color: #d7d3d0;
         text-align: center;
         align-content: center;
       }
