--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
         background-color: #d7d3d0;
         text-align: center;
         align-content: center;
-}        
- .lds-ring {
+            }
+
+    .lds-ring {
   /* change color here */
-  color: #789BB7;
+  color: #91a99e
 }
 .lds-ring,
 .lds-ring div {
@@ -51,7 +52,8 @@
   100% {
     transform: rotate(360deg);
   }
-
+}
+    
   </style>
 </head>
 <body>
