--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title> Zona Wifi Residencias Mandalay </title>
   <style>
       body {
+        
         background-color: #d7d3d0;
         text-align: center;
         align-content: center;
@@ -12,6 +13,7 @@
     .lds-ring {
   /* change color here */
   color: #91a99e
+  align-content: center;
 }
 .lds-ring,
 .lds-ring div {
