--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
 .lds-ring,
 .lds-ring div {
   box-sizing: border-box;
+  text-align: center;
+  align-content: center;
+
 }
 .lds-ring {
   display: inline-block;
